# vocos

./: .gitignore  LICENSE  README.md  inference.py  pack_ckpt.py  pyproject.toml  test.py  train.py  vocos.ipynb
.devcontainer/: Dockerfile
configs/: vocos-encodec.yaml  vocos-imdct.yaml  vocos-lin.yaml  vocos-resnet.yaml  vocos.yaml
filelists/: train.list  val.list
vocos/: __init__.py  dataset.py  discriminators.py  domain.py  experiment.py  feature_extractors.py  heads.py  loss.py  mel_processing.py  models.py  modules.py  pretrained.md  pretrained.py  spectral_ops.py
